Bug 47393 - Can't cancel paste of externally copied text into a spreadsheet
Summary: Can't cancel paste of externally copied text into a spreadsheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: All All
: medium minor
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0 target:3.5.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-15 23:14 UTC by Matthew Francis
Modified: 2012-03-16 13:21 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2012-03-15 23:14:58 UTC
When pasting externally copied text into a Calc spreadsheet, an "Import Options" dialog appears. Pressing "OK" or "Cancel" in this dialog has the same effect - the text is still pasted.

(Possibly not all types of paste trigger the dialog? Formatted text copied from Firefox definitely does, however)


Originally raised in bug 46077, but the issue solved under that bug appears to have been separate to this problem so I'm re-raising it as a fresh bug.
Comment 1 Not Assigned 2012-03-16 02:53:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd8be4eae82525434454cc3c7274f7a7a44158c0

don't paste content if user cancels html import, fdo#47393
Comment 2 Not Assigned 2012-03-16 13:21:07 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76f3a63432e70d017760a2087652a1abc9b126d3&g=libreoffice-3-5

don't paste content if user cancels html import, fdo#47393


It will be available in LibreOffice 3.5.2.