don't paste content if user cancels html import, fdo#47393